# ToolChest

./: .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
scripts/: android-install.sh  ios-install.sh
src/: App.tsx  hooks.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/tools/: claude_watcher.rs  deepseek.rs  envsetup.rs  hosts.rs  http.rs  lan.rs  mod.rs  port.rs  trust_app.rs
src/tools/: ClaudeWatcher.tsx  DeepSeek.tsx  DeepSeekTab.tsx  EnvSetup.tsx  HostsEditor.tsx  HttpClient.tsx  LanIncomingModal.tsx  LanShare.tsx  PortScanner.tsx  ProxyTool.tsx  ShareBrowser.tsx  TodoList.tsx  TrustApp.tsx  deepseek.ts  importRequest.ts  lanContext.tsx
