[package]
name = "baibao"
version = "0.1.0"
description = "百宝箱 - Developer Toolbox"
authors = []
edition = "2021"

[lib]
name = "baibao_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "gzip", "rustls-tls", "json"] }
tiny_http = "0.12"
socket2 = { version = "0.5", features = ["all"] }
getrandom = "0.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
