[package]
name = "baibao"
version = "0.1.0"
description = "百宝箱 - Developer Toolbox"
authors = []
edition = "2021"

[lib]
name = "baibao_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "gzip", "rustls-tls", "json"] }
tiny_http = { version = "0.12", features = ["ssl-rustls"] }
rcgen = "0.13"
# 与 reqwest 0.12 同版本的 rustls，用于「按证书指纹固定」的自定义校验器（绕开 webpki 对自签证书的限制）
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
socket2 = { version = "0.5", features = ["all"] }
if-addrs = "0.15"
zip = { version = "2", default-features = false, features = ["deflate"] }
getrandom = "0.2"
sha2 = "0.10"
# 共享密码静态加密存储（纯 Rust，无原生依赖）；密钥从机器标识派生，不落盘
chacha20poly1305 = "0.10"
# 代理隧道（SOCKS5 over 百宝箱 TLS）：异步全双工转发
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "time"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"

# 桌面专属：系统托盘 + 开机自启（iOS/Android 无此概念）。
# 注意：cargo 不认识 Tauri 的 `desktop` cfg，依赖筛选必须用真实 target_os。
# tauri 的特性按平台合并：桌面 = [] ∪ [tray-icon]，移动端 = []。
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
